--- a/ad_contentpage-student2.html
+++ b/ad_contentpage-student2.html
@@ -23,6 +23,7 @@
                     <li><a href="gallery.html">GALLERY</a></li>
                     <li><a href="feedback.html">FEEDBACK</a></li>
                     <li><a href="sitemap.html">SITE MAP</a></li>
+                    <li><a href="profile.html">Profile</a></li>
                     <li><a href="#">ABOUT US</a></li>
                 </ul>
             </div>
