--- a/contentpage-student2.html
+++ b/contentpage-student2.html
@@ -21,7 +21,8 @@
                     <li><a href="gallery.html">GALLERY</a></li>
                     <li><a href="feedback.html">FEEDBACK</a></li>
                     <li><a href="sitemap.html">SITE MAP</a></li>
-                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="profile.html">PROFILE</a></li>
+                    <li><a href="team.html">ABOUT US</a></li>
                 </ul>
             </div>
         </nav>
