--- a/ad_contentpage-student2.html
+++ b/ad_contentpage-student2.html
@@ -24,7 +24,7 @@
                     <li><a href="feedback.html">FEEDBACK</a></li>
                     <li><a href="sitemap.html">SITE MAP</a></li>
                     <li><a href="profile.html">PROFILE</a></li>
-                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="team.html">ABOUT US</a></li>
                 </ul>
             </div>
         </nav>
