--- a/checkout.html
+++ b/checkout.html
@@ -27,6 +27,7 @@
                     <li><a href="">GALLARY</a></li>
                     <li><a href="feedback.html">FEEDBACK</a></li>
                     <li><a href="">SITE MAP</a></li>
+                    <li><a href="profile.html">PROFILE</a></li>
                     <li><a href="">ABOUT US</a></li>
                 </ul>
             </div>
