--- a/checkout.html
+++ b/checkout.html
@@ -22,8 +22,8 @@
             <a href="home.html"><img src="assets/WhatsApp Image 2024-07-15 at 16.43.48_7f2ec30d.jpg" alt="Logo"></a>
             <div class="nav-link">
                 <ul>
-                    <li><a href="home.html" class="active">HOME</a></li>
-                    <li><a href="shop.html">SHOP</a></li>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="shop.html" class="active">SHOP</a></li>
                     <li><a href="gallery.html">GALLERY</a></li>
                     <li><a href="feedback.html">FEEDBACK</a></li>
                     <li><a href="sitemap.html">SITE MAP</a></li>
