--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
                         <li><a href="shop.html">SHOP</a></li>
                         <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="feedback.html">FEEDBACK</a></li>
+                        <li><a href="sitemap.html">SITE MAP</a></li>
                         <li><a href="profile.html">PROFILE</a></li>
                         <li><a href="team.html">ABOUT US</a></li>
                     </ul>
